Pirms novācu visu kļūdas risināšanas bezpanākumu haosu

--- a/Uzd04/Uzd4_Rubene.Rmd
+++ b/Uzd04/Uzd4_Rubene.Rmd
@@ -86,44 +86,42 @@ Funkcija:
  
 ```{r}
 mana_funkcija <- function(mezs_dati,koku_suga) {
-sakums <- Sys.time()
+ref10m <- rast(("../ref_rastri/LV10m_10km.tif"))
+ref100m <- rast(("../ref_rastri/LV100m_10km.tif"))
+vieta <- "../centra_mezi"
 mezi <- st_read_parquet(mezs_dati)
 faila_nos <- tools::file_path_sans_ext(basename(mezs_dati))
 fails <- file.path(vieta, paste0(faila_nos, ".tif"))
 priezu_mezi <- mezi %>% filter(s10 == koku_suga)
 priezu_mezi_10m <- rasterize(priezu_mezi,ref10m, background = 0)
 priezu_mezi_10m[is.na(ref10m)] <- NA
-priezu_mezi_100m <- priezu_mezi_10m %>%
-    aggregate(fact = 10, fun = sum) %>%
-    resample(ref100m, method = "near", filename = fails, overwrite = TRUE)
-beigas <- Sys.time()
-return(list(start = sakums, end = beigas))
+priezu_mezi_100m <-
+  terra::resample(priezu_mezi_10m,ref100m,method="average",
+                  filename = fails, overwrite=TRUE)
 }
 ```
 
-Izmēģinu ar centra mežu datiem:
+Izmēģinu ar centra mežu datiem, mērot patērēto laiku:
 
 ```{r}
-centra_mezi <- mana_funkcija(
+
+uzd2 <- system.time(mana_funkcija(
   mezs_dati = "../centra_mezi/centra_mezi_labots.parquet",
   koku_suga = 1
-)
+))
+print(uzd2)
 ```
 
-Vai funkcija dara to, kas bija paredzēts? Vismaz paskatīšos vizuāli uz rezultātu
+Šī darbība aizņēma aptuveni 3,5 minūtes.
+
+Operatīvā atmiņa pietika, maksimāli tika izmantoti aptuveni 6,7 GB pastāvīgi ap 6,5 GBties resource monitor, maksimāli novēroju 10 CPU (man likās, ka manam datoram ir astoņi kodoli? Laikam neesmu sapratusi kādas terminoloģijas nianses), lielākoties tas svārstījās no 5-8
+
+Vai funkcija dara to, kas bija paredzēts? Paskatīšos vizuāli uz rezultātu
 
 ```{r, warning = FALSE}
 rezultats <- rast("../centra_mezi/centra_mezi_labots.tif")
 plot(rezultats) # šķiet, ka viss labi
-
-laiks <- centra_mezi$end - centra_mezi$start
-print(laiks)
 ```
-
-Šī darbība aizņēma aptuveni 3 minūtes.
-
-Operatīvā atmiņa pietika, maksimāli tika izmantoti aptuveni 6,8 GB. Skatoties resource monitor maksimāli novēroju 9 CPU (man likās, ka manam datoram ir astoņi kodoli? Laikam neesmu sapratusi kādas nianses), lielākoties tas svārstījās no 3-6
-
 
 # 3) Funkcjas pielietošana ciklā 
 
@@ -163,7 +161,7 @@ uzd3 <- system.time(
 print(uzd3)
 ```
 
-Darbība aizņēma 576,33 sekundes jeb aptuveni 10 minūtes. Operatīvā atmiņa pietika, maksimāli tika izmantoti aptuveni 7,4 GB, bet lielākoties ap 6,8 GB . Maksimāli novēroju 8 CPU, lielākoties svārstījās no 3-6
+Darbība aizņēma 576,33 sekundes jeb aptuveni 10 minūtes. Operatīvā atmiņa pietika, viss līdzīgi, kā iepriekš - maksimāli tika izmantoti aptuveni 7,2 GB, bet lielākoties ap 6,5 GB . Maksimāli novēroju 10 CPU, lielākoties svārstījās no 6-9
 
 # 4) Iepriekšējā uzdevuma atkārtošana, izmantojot {doParallel} un {foreach} (šis man nestrādāja (diskusija #43), bet te vēl atstāju visādas lietas, ko mēģināju darīt)
 
@@ -178,9 +176,11 @@ Izmantošu {foreach} ciklu
 
 ```{r, cache = TRUE}
 # sākotnējais variants, kurš nenostrādāja
-uzd4_1 <- foreach(mezi = MVRnodalas_par, 
+
+uzd4 <- system.time(
+  foreach(mezi = MVRnodalas_par, 
           .packages = c("tidyverse","sfarrow","sf","terra")) %dopar% {
-            mana_funkcija(mezs_dati = mezi, koku_suga = 1)}
+            mana_funkcija(mezs_dati = mezi, koku_suga = 1)})
 # Error in { : task 1 failed - "NULL value passed as symbol address"
 
 
@@ -210,6 +210,11 @@ return(list(start = sakums, end = beigas))
             }
             mana_funkcija(mezs_dati = mezi, koku_suga = 1)}
 # tas pats kļūdas paziņojums kas uzd4_1
+
+uzd4_4 <- foreach(mezi = seq_along(MVRnodalas_par), 
+          .packages = c("tidyverse","sfarrow","sf","terra")) %dopar% {
+            mana_funkcija(mezs_dati = mezi, koku_suga = 1)}
+
 
 #stopCluster(cluster)
 
